--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -6,5 +6,6 @@ ja:
       task:
         name: タスク名
         detail: 詳しい内容
+        expired_at: 終了期限
         created_at: 登録日時
         updated_at: 更新日時
